--- a/user.html
+++ b/user.html
@@ -48,7 +48,7 @@
     <header class="sticky top-0 z-50 bg-white shadow-lg">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
             <a href="index.html" class="text-2xl font-extrabold text-indigo-600">
-                Project KTV Booking
+                Rosalinas KTV Booking
             </a>
             <a href="admin.html" class="bg-indigo-600 text-white px-4 py-2 rounded-lg hover:bg-indigo-700 transition duration-150 shadow-md text-sm font-semibold">
                 Admin Panel
