--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
             <!-- Logo -->
             <div class="text-2xl font-extrabold text-indigo-600">
-                Project KTV
+                Rosalinas KTV
             </div>
             <!-- Navigation Links (Hidden on mobile, shown on desktop) -->
             <nav class="hidden md:flex space-x-8 font-medium">
@@ -181,7 +181,7 @@
                 Sing Your Heart Out with <span class="text-indigo-600">Premium KTV</span> Rates
             </h1>
             <p class="text-xl text-gray-600 max-w-3xl mx-auto mb-8 fade-in-up" data-delay="150">
-                The ultimate KTV experience in the city. Clear sound, comfortable rooms, and flexible **hourly pricing in Philippine Pesos (PHP).**
+                WEB-BASED KTV MANAGEMENT PLATFORM WITH CUSTOMER ENGAGEMENT TOOLS FOR ROSALINA'S & MARIE RESTAURANT
             </p>
             
             <!-- Room Availability Status Section -->
